--- a/test/test.css
+++ b/test/test.css
@@ -3,7 +3,8 @@
 #move {
     background: #0bd;
     border-radius: 50%;
-    padding: 30px 30px;
+    margin: 0 100px;
     color: #fff;
     text-align: center;
+    line-height: 100px;
 }
